<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VotingApp</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_poll">Create New Poll</string>
    <string name="previous_poll">Previous Polls</string>
    <string name="create_group">Create Group</string>
    <string name="view_group">View Groups</string>
    <string name="title_activity_new_poll">NewPoll</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_previous_polls">PreviousPolls</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="title_activity_view_groups">ViewGroups</string>
    <string name="title_activity_ongoing_poll">OngoingPoll</string>
    <string name="title_activity_poll_results">PollResults</string>
    <string name="title_activity_one_group">OneGroup</string>
    <string name="group">Group:</string>
    <string name="group_prompt">Choose a Group</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="question">Question:</string>
    <string name="question_prompt">What is your question?</string>
    <string name="answer">Answers:</string>
    <string name="btnStart">Start</string>
</resources>
