<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPreviousPoll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:minWidth="150dp"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/btnViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnCreateGroup"
        android:layout_marginTop="25dp"
        android:minWidth="150dp"
        android:text="@string/view_group" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnViewGroup"
        android:layout_marginTop="25dp"
        android:minWidth="150dp"
        android:text="@string/action_settings" />

    <Button
        android:id="@+id/btnNewPoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:minWidth="150dp"
        android:text="@string/create_new_poll" />

    <Button
        android:id="@+id/btnPreviousPoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnNewPoll"
        android:layout_marginTop="25dp"
        android:minWidth="150dp"
        android:text="@string/previous_poll" />

</RelativeLayout>